# tree-sitter-river

./: CMakeLists.txt  Makefile  README.md  go.mod  grammar.js  package-lock.json  pyproject.toml  setup.py  tree-sitter-river.wasm  tree-sitter.json
bindings/c/: tree-sitter-river.pc.in
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_river/: __init__.py  binding.c
bindings/swift/TreeSitterRiver/: river.h
queries/: aerial.scm  folds.scm  highlights.scm  injections.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
